--- a/rules
+++ b/rules
@@ -5,7 +5,7 @@ export DH_VIRTUALENV_INSTALL_SUFFIX=dtee
 export DH_VIRTUALENV_ARGUMENTS=--python /usr/bin/python3
 export DH_PIP_EXTRA_ARGS=--no-deps --no-cache-dir --ignore-installed
 export DH_REQUIREMENTS_FILE=debian/requirements.txt
-DH_DTEE_BIN=build$(DH_VIRTUALENV_INSTALL_ROOT)/$(DH_VIRTUALENV_INSTALL_SUFFIX)/bin
+DH_DTEE_BIN=$(CURDIR)/build$(DH_VIRTUALENV_INSTALL_ROOT)/$(DH_VIRTUALENV_INSTALL_SUFFIX)/bin
 
 %:
 	dh $@ --buildsystem=dh_virtualenv
