--- a/rules
+++ b/rules
@@ -13,7 +13,7 @@ DH_DTEE_BIN=$(CURDIR)/build$(DH_VIRTUALENV_INSTALL_ROOT)/$(DH_VIRTUALENV_INSTALL
 override_dh_auto_build:
 	dh_auto_build
 	PATH="$(DH_DTEE_BIN):$(PATH)" meson --prefix /usr --buildtype=plain build/debian
-	PATH="$(DH_DTEE_BIN):$(PATH)" ninja -v -C build/debian
+	PATH="$(DH_DTEE_BIN):$(PATH)" ninja -v -C build/debian -j 1
 
 override_dh_auto_test:
 	PATH="$(DH_DTEE_BIN):$(PATH)" ninja -v -C build/debian test
