--- a/control
+++ b/control
@@ -2,10 +2,10 @@ Source: dtee
 Section: utils
 Priority: optional
 Maintainer: Simon Arlott <debian@sa.me.uk>
-Build-Depends: debhelper (>=9), dh-virtualenv (>=1.0), python3 (>=3.5),
- libboost-dev (>=1.62), libboost-filesystem-dev (>=1.62),
- libboost-program-options-dev (>=1.62), python3-sphinx (>=1.4.9)
-Standards-Version: 3.9.8
+Build-Depends: debhelper (>=9), python3 (>=3.4.2), virtualenv (>=1.11.6),
+ libboost-dev (>=1.55), libboost-filesystem-dev (>=1.55),
+ libboost-program-options-dev (>=1.55)
+Standards-Version: 3.9.6
 Homepage: https://dtee.readthedocs.io/
 
 Package: dtee
