--- a/rules
+++ b/rules
@@ -1,17 +1,14 @@
 #!/usr/bin/make -f
 
-export DH_VIRTUALENV_INSTALL_ROOT=/virtualenv
-export DH_VIRTUALENV_INSTALL_SUFFIX=dtee
-export DH_VIRTUALENV_ARGUMENTS=--python /usr/bin/python3
-export DH_PIP_EXTRA_ARGS=--no-deps --no-cache-dir --ignore-installed
-export DH_REQUIREMENTS_FILE=debian/requirements.txt
-DH_DTEE_BIN=$(CURDIR)/build$(DH_VIRTUALENV_INSTALL_ROOT)/$(DH_VIRTUALENV_INSTALL_SUFFIX)/bin
+DH_DTEE_BIN=$(CURDIR)/build/virtualenv/dtee/bin
 
 %:
-	dh $@ --buildsystem=dh_virtualenv
+	dh $@
 
 override_dh_auto_build:
-	dh_auto_build
+	virtualenv --python /usr/bin/python3 build/virtualenv/dtee
+	build/virtualenv/dtee/bin/python3 build/virtualenv/dtee/bin/pip install --upgrade pip==8.1.1 --no-deps --ignore-installed
+	build/virtualenv/dtee/bin/python3 build/virtualenv/dtee/bin/pip install -r debian/requirements.txt --no-deps --ignore-installed
 	PATH="$(DH_DTEE_BIN):$(PATH)" meson --prefix /usr --buildtype=plain build/debian
 	PATH="$(DH_DTEE_BIN):$(PATH)" ninja -v -C build/debian -j 1
 
