--- a/control
+++ b/control
@@ -1,10 +1,10 @@
 Source: dtee
 Section: utils
 Priority: optional
-Maintainer: Simon Arlott <debian@sa.me.uk>
-Build-Depends: debhelper (>=9), dh-virtualenv (>=1.0), python3 (>=3.5),
- libboost-dev (>=1.62), libboost-filesystem-dev (>=1.62),
- libboost-program-options-dev (>=1.62), python3-sphinx (>=1.4.9)
+Maintainer: Simon Arlott <ubuntu@sa.me.uk>
+Build-Depends: debhelper (>=9), dh-virtualenv (>=1.0), python3 (>=3.6),
+ ninja-build (>=1.8.2), libboost-dev (>=1.65), libboost-filesystem-dev (>=1.65),
+ libboost-program-options-dev (>=1.65), python3-sphinx (>=1.6.7)
 Standards-Version: 3.9.8
 Homepage: https://dtee.readthedocs.io/
 
