--- a/control
+++ b/control
@@ -4,7 +4,9 @@ Priority: optional
 Maintainer: Simon Arlott <debian@sa.me.uk>
 Build-Depends: debhelper (>=9), python3 (>=3.4.2), virtualenv (>=1.11.6),
  libboost-dev (>=1.55), libboost-filesystem-dev (>=1.55),
- libboost-program-options-dev (>=1.55)
+ libboost-program-options-dev (>=1.55),
+ dash (>=0.5.7), bash (>=4.3), coreutils (>=8.23), diffutils (>=1:3.3),
+ findutils (>=4.4.2)
 Standards-Version: 3.9.6
 Homepage: https://dtee.readthedocs.io/
 
