--- a/control
+++ b/control
@@ -4,7 +4,9 @@ Priority: optional
 Maintainer: Simon Arlott <ubuntu@sa.me.uk>
 Build-Depends: debhelper (>=9), python3 (>=3.5), virtualenv (>=15.0.1),
  libboost-dev (>=1.58), libboost-filesystem-dev (>=1.58),
- libboost-program-options-dev (>=1.58), python3-sphinx (>=1.3.6)
+ libboost-program-options-dev (>=1.58), python3-sphinx (>=1.3.6),
+ dash (>=0.5.8), bash (>=4.3), coreutils (>=8.25), diffutils (>=1:3.3),
+ findutils (>=4.6.0)
 Standards-Version: 3.9.7
 Homepage: https://dtee.readthedocs.io/
 
