--- a/rules
+++ b/rules
@@ -12,8 +12,8 @@ DH_DTEE_BIN=$(CURDIR)/build$(DH_VIRTUALENV_INSTALL_ROOT)/$(DH_VIRTUALENV_INSTALL
 
 override_dh_auto_build:
 	dh_auto_build
-	PATH="$(DH_DTEE_BIN):$(PATH)" meson --prefix /usr --buildtype=plain build/debian
-	PATH="$(DH_DTEE_BIN):$(PATH)" ninja -v -C build/debian -j 1
+	PATH="$(DH_DTEE_BIN):$(PATH)" meson --prefix /usr --buildtype=plain build/debian --unity on
+	PATH="$(DH_DTEE_BIN):$(PATH)" ninja -v -C build/debian
 
 override_dh_auto_test:
 	PATH="$(DH_DTEE_BIN):$(PATH)" ninja -v -C build/debian test
