--- a/control
+++ b/control
@@ -2,12 +2,12 @@ Source: dtee
 Section: utils
 Priority: optional
 Maintainer: Simon Arlott <ubuntu@sa.me.uk>
-Build-Depends: debhelper (>=9), python3 (>=3.5), virtualenv (>=15.0.1),
- libboost-dev (>=1.58), libboost-filesystem-dev (>=1.58),
- libboost-program-options-dev (>=1.58), python3-sphinx (>=1.3.6),
- dash (>=0.5.8), bash (>=4.3), coreutils (>=8.25), diffutils (>=1:3.3),
- findutils (>=4.6.0)
-Standards-Version: 3.9.7
+Build-Depends: debhelper (>=9), python3 (>=3.4), python-virtualenv (>=1.11.4),
+ libboost-dev (>=1.54), libboost-filesystem-dev (>=1.54),
+ libboost-program-options-dev (>=1.54),
+ dash (>=0.5.7), bash (>=4.3), coreutils (>=8.21), diffutils (>=1:3.3),
+ findutils (>=4.4.2)
+Standards-Version: 3.9.5
 Homepage: https://dtee.readthedocs.io/
 
 Package: dtee
