--- a/control
+++ b/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>=9), dh-virtualenv (>=1.0), python3 (>=3.5),
  libboost-dev (>=1.62), libboost-filesystem-dev (>=1.62),
  libboost-program-options-dev (>=1.62), python3-sphinx (>=1.4.9),
  dash (>=0.5.8), bash (>=4.4), coreutils (>=8.26), diffutils (>=1:3.5),
- findutils (>=4.6.0)
+ findutils (>=4.6.0), gettext (>=0.19.8.1)
 Standards-Version: 3.9.8
 Homepage: https://dtee.readthedocs.io/
 
