--- a/control
+++ b/control
@@ -2,11 +2,11 @@ Source: dtee
 Section: utils
 Priority: optional
 Maintainer: Simon Arlott <debian@sa.me.uk>
-Build-Depends: debhelper (>=12), meson (>=0.49.2), ninja-build (>=1.8.2),
- libboost-dev (>=1.67), libboost-filesystem-dev (>=1.67),
- libboost-program-options-dev (>=1.67), python3-sphinx (>=1.8.4),
- dash (>=0.5.10), bash (>=5.0), coreutils (>=8.30), diffutils (>=1:3.7),
- findutils (>=4.6.0)
+Build-Depends: debhelper (>=12), dh-virtualenv (>=1.1), python3 (>=3.7),
+ ninja-build (>=1.8.2), libboost-dev (>=1.67),
+ libboost-filesystem-dev (>=1.67), libboost-program-options-dev (>=1.67),
+ python3-sphinx (>=1.8.4), dash (>=0.5.10), bash (>=5.0), coreutils (>=8.30),
+ diffutils (>=1:3.7), findutils (>=4.6.0), gettext (>=0.19.8.1)
 Standards-Version: 3.9.8
 Homepage: https://dtee.readthedocs.io/
 
