--- a/control
+++ b/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>=9), dh-virtualenv (>=1.0), python3 (>=3.6),
  ninja-build (>=1.8.2), libboost-dev (>=1.65), libboost-filesystem-dev (>=1.65),
  libboost-program-options-dev (>=1.65), python3-sphinx (>=1.6.7),
  dash (>=0.5.8), bash (>=4.4), coreutils (>=8.28), diffutils (>=1:3.6),
- findutils (>=4.6.0)
+ findutils (>=4.6.0), gettext (>=0.19.8.1)
 Standards-Version: 3.9.8
 Homepage: https://dtee.readthedocs.io/
 
