--- a/control
+++ b/control
@@ -2,12 +2,12 @@ Source: dtee
 Section: utils
 Priority: optional
 Maintainer: Simon Arlott <debian@sa.me.uk>
-Build-Depends: debhelper (>=12), dh-virtualenv (>=1.1), python3 (>=3.7),
- ninja-build (>=1.8.2), libboost-dev (>=1.67),
- libboost-filesystem-dev (>=1.67), libboost-program-options-dev (>=1.67),
- python3-sphinx (>=1.8.4), dash (>=0.5.10), bash (>=5.0), coreutils (>=8.30),
- diffutils (>=1:3.7), findutils (>=4.6.0), gettext (>=0.19.8.1)
-Standards-Version: 3.9.8
+Build-Depends: debhelper (>=13), meson (>=0.56.2), ninja-build (>=1.10.1),
+ libboost-dev (>=1.74), libboost-filesystem-dev (>=1.74),
+ libboost-program-options-dev (>=1.74), python3-sphinx (>=3.4.3),
+ dash (>=0.5.11), bash (>=5.1), coreutils (>=8.32), diffutils (>=1:3.7),
+ findutils (>=4.8.0)
+Standards-Version: 4.5.1
 Homepage: https://dtee.readthedocs.io/
 
 Package: dtee
