--- a/control
+++ b/control
@@ -3,10 +3,9 @@ Section: utils
 Priority: optional
 Maintainer: Simon Arlott <debian@sa.me.uk>
 Build-Depends: debhelper (>=13), meson (>=1.0.1), ninja-build (>=1.11.1),
- libboost-dev (>=1.74), libboost-filesystem-dev (>=1.74),
- libboost-program-options-dev (>=1.74), python3-sphinx (>=5.3.0),
- dash (>=0.5.12), bash (>=5.2), coreutils (>=9.1), diffutils (>=1:3.8),
- findutils (>=4.9.0)
+ libboost-dev (>=1.74), libboost-program-options-dev (>=1.74),
+ python3-sphinx (>=5.3.0), dash (>=0.5.12), bash (>=5.2), coreutils (>=9.1),
+ diffutils (>=1:3.8), findutils (>=4.9.0)
 Standards-Version: 4.6.2
 Homepage: https://dtee.readthedocs.io/
 
