--- a/control
+++ b/control
@@ -3,10 +3,9 @@ Section: utils
 Priority: optional
 Maintainer: Simon Arlott <ubuntu@sa.me.uk>
 Build-Depends: debhelper (>=13), meson (>=0.61.2), ninja-build (>=1.10.1),
- libboost-dev (>=1.74), libboost-filesystem-dev (>=1.74),
- libboost-program-options-dev (>=1.74), python3-sphinx (>=4.3.2),
- dash (>=0.5.11), bash (>=5.1), coreutils (>=8.32), diffutils (>=1:3.8),
- findutils (>=4.8.0), gettext (>=0.21)
+ libboost-dev (>=1.74), libboost-program-options-dev (>=1.74),
+ python3-sphinx (>=4.3.2), dash (>=0.5.11), bash (>=5.1), coreutils (>=8.32),
+ diffutils (>=1:3.8), findutils (>=4.8.0), gettext (>=0.21)
 Standards-Version: 4.6.0
 Homepage: https://dtee.readthedocs.io/
 
