--- a/control
+++ b/control
@@ -2,22 +2,23 @@ Source: dtee
 Section: utils
 Priority: optional
 Maintainer: Simon Arlott <debian@sa.me.uk>
-Build-Depends: debhelper (>=13), meson (>=1.0.1), ninja-build (>=1.11.1),
- libboost-dev (>=1.74), libboost-program-options-dev (>=1.74),
- python3-sphinx (>=5.3.0), dash (>=0.5.12), bash (>=5.2), coreutils (>=9.1),
- diffutils (>=1:3.8), findutils (>=4.9.0)
-Standards-Version: 4.6.2
+Build-Depends: debhelper (>=13), debhelper-compat (=13),
+ meson (>=1.7.0), ninja-build (>=1.12.1), libboost-dev (>=1.83),
+ libboost-program-options-dev (>=1.83), python3-sphinx (>=8.1.3),
+ dash (>=0.5.12), bash (>=5.2), coreutils (>=9.7), diffutils (>=1:3.10),
+ findutils (>=4.10.0)
+Standards-Version: 4.7.2
 Homepage: https://dtee.readthedocs.io/
 
 Package: dtee
 Architecture: any
 Multi-Arch: foreign
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Description: Run a program with standard output and standard error copied to files
- Run a program with standard output and standard error copied to files while
- maintaining the original standard output and standard error as normal.
+Description: Run a program with standard output and standard error copied to
+ files while maintaining the original standard output and standard error in
+ the original order.
  .
- Can also operate in cron mode (implied when invoked as "cronty"). Suppresses
- all output unless the process outputs an error message or has a non-zero exit
- status whereupon the original output will be written as normal and the exit
- code will be appended to standard error.
+ When invoked as "cronty", allows programs to be run from cron, suppressing
+ all output unless the process outputs an error message or has a non-zero
+ exit status whereupon the original output will be written as normal and the
+ exit code will be appended to standard error.
